--- a/JS Practise/index.html
+++ b/JS Practise/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>JS Practise</title>
+    <script src="js/script.js">
+
+    </script>
   </head>
   <body>
     <h1>Hello User</h1>
