--- a/JS Practise/index.html
+++ b/JS Practise/index.html
@@ -4,10 +4,16 @@
     <meta charset="utf-8">
     <title>JS Practise</title>
     <script src="js/script.js">
-
     </script>
   </head>
   <body>
-    <h1>Hello User</h1>
+    <h1>To Do List</h1>
+    <h2>
+      <ul>
+        <li>"/"New/" - Add A Todo"</li>
+        <li>"/"List/" - List All Todos"</li>
+        <li>"/"Quit/" - Quit App"</li>
+      </ul>
+    </h2>
   </body>
 </html>
