--- a/JS Practise/index.html
+++ b/JS Practise/index.html
@@ -7,13 +7,14 @@
     </script>
   </head>
   <body>
-    <h1>To Do List</h1>
+    <!-- <h1>To Do List</h1>
     <h2>
       <ul>
         <li>"/"New/" - Add A Todo"</li>
         <li>"/"List/" - List All Todos"</li>
         <li>"/"Quit/" - Quit App"</li>
       </ul>
-    </h2>
+    </h2> -->
+
   </body>
 </html>
