--- a/JS Practise/index.html
+++ b/JS Practise/index.html
@@ -15,6 +15,12 @@
         <li>"/"Quit/" - Quit App"</li>
       </ul>
     </h2> -->
-
+    <h1>Title</h1>
+    <h1>home</h1>
+    <ul>
+      <li id="highlight"> List Item 1</li>
+      <li id="bolded"> List Item 2</li>
+      <li id="bolded"> List Item 3</li>
+    </ul>
   </body>
 </html>
