--- a/JS Practise/index.html
+++ b/JS Practise/index.html
@@ -17,8 +17,8 @@
     </h2> -->
     <h1>Title</h1>
     <h1>home</h1>
+    <p id="first" class="special"> hello</p>
     <ul>
-      <li id="highlight"> List Item 1</li>
       <li id="bolded"> List Item 2</li>
       <li id="bolded"> List Item 3</li>
     </ul>
